--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-hello!
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Ozon OS</title>
+    <meta name="description" content="Website for Ozon OS">
+    <meta name="keywords" content="linux numix nitrux">
+    <meta name="author" content="Ozon Devs">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+    <div>
+        <h1>Ozon OS</h1>
+        <h2>An exciting new operating system<br>from the developers of Numix &amp; Nitrux.</h2>
+        <br>
+        <h2 style="color: #35ccc5;">Coming early 2015</h2>
+    </div>
+</body>
+
+</html>
