--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div>
         <h1>Ozon OS</h1>
-        <h2>An exciting new operating system<br>from the developers of Numix &amp; Nitrux.</h2>
+        <h2>An exciting new operating system<br>from the developers of <a href="https://numixproject.org/">Numix</a> &amp; <a href="http://nitrux.in/">Nitrux</a>.</h2>
         <br>
         <h2 style="color: #35ccc5;">Coming early 2015</h2>
     </div>
