--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
-<!DOCTYPE html>
 <html>
-
-<head>
-    <title>Ozon OS</title>
-    <meta name="description" content="Website for Ozon OS">
-    <meta name="keywords" content="linux numix nitrux">
-    <meta name="author" content="Ozon Devs">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
-<body>
-    <div>
-        <h1>Ozon OS</h1>
-        <h2>An exciting new operating system<br>from the developers of <a href="https://numixproject.org/">Numix</a> &amp; <a href="http://nitrux.in/">Nitrux</a>.</h2>
-        <br>
-        <h2 style="color: #35ccc5;">Coming early 2015</h2>
-    </div>
-</body>
-
+	<head>
+		 <title>Ozon OS</title>
+		<meta name="description" content="Website for Ozon OS">
+		<meta name="keywords" content="linux numix nitrux">
+		<meta name="author" content="Ozon Devs">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link type="text/css" rel="stylesheet" href="css/index.css">
+	</head>
+	<body>
+	<center>
+		<header>
+			<img id="headerimage" src="image/header.jpeg"/>
+			<img src="image/ozonos.jpeg" id="logo" />
+			<ul>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Store</a></li>
+				<li><a href="#">Docs</a></li>
+				<li><a href="#">Contribute</a></li>
+			</ul>
+			
+				<h2> The Opreting system designed for you </h2>
+				<div id="video">	
+					<video width="500" height="400" controls>
+					    <source src="movie.mp4" type="video/mp4">
+					    <source src="movie.ogg" type="video/ogg">
+						Your browser does not support the video tag.
+					</video>
+				</div>		
+				
+		</header>
+		<div id="button">
+			<a href><div id="main_button">
+				<div id="icon"></div><span style="font-size: 25px;">Get Ozon OS Beta</span>
+			</div></a>
+			<div id="button_link">
+				<a href="#" style="margin-right: 10px;">System Requirments </a><span class="boll">00</span>
+				<a href="#" style="margin-left: 10px;">Installation instructions</a>
+			</div>
+		</button>
+		<div id="main">
+			
+		</div>
+	<center>	
+	</body>
 </html>
