--- a/index.html
+++ b/index.html
@@ -40,8 +40,43 @@
 			</div>
 		</button>
 		<div id="main">
-			
+			<table>
+				<tbody>
+					<tr>
+						<td>
+							<h2>Beautiful and fast</h2>
+							<img src="image/main1.jpg"/>
+							<p>Atom, the desktop envirment of Ozon is designed in house to get your stuff done, while still being slick and modern.<p>
+						</td>
+						<td>
+							<h2>Stable and secure</h2>
+							<img src="image/main2.jpg"/>
+							<p>Based on the stable and secure core of fedora, Ozon provides the security you've come to excpect from a modern Linex system.</p>
+						</td>
+						<td>
+							<h2>Free and open</h2>
+							<img src="image/main3.jpg"/>
+							<p>Ozon is free and open source. So anyone can take a look at source code, fork it for their own needs and contribute back to the upstream.</p>
+						</td>
+					</tr>
+				<tbody>		
+			</table>
+			<div id="numix">
+				<h2> Ozon is a collboration between</h2>
+					<table>
+						<tbody>
+							<tr>
+								<td><img src="image/numix.png""/> </td>
+								<td ><p> & </p> </td> 
+								<td><img src="image/numix.png"/> </td>
+							</tr>
+						</tbody>	
+					</table>	
+			</div>
 		</div>
+		<footer>
+			<p>&copy 2015 Ozon OS devs. Content licensed under CC-BY-SA 3.0.</p>
+		</footer>
 	<center>	
 	</body>
 </html>
