--- a/index.html
+++ b/index.html
@@ -28,25 +28,28 @@ layout: boilerplate
     <div class="container-content row">
         <div class="col small-12 medium-6 large-4">
             <h2>Beautiful and fast</h2>
+            <img class="feat-image" src="./assets/feat-beautiful.png" alt="Beautiful">
             <p>Atom, the desktop environment of Ozon is designed in house to get your stuff done, while still being slick and modern.</p>
         </div>
         <div class="col small-12 medium-6 large-4">
             <h2>Stable and secure</h2>
+            <img class="feat-image" src="./assets/feat-stable.png" alt="Stable">
             <p>Based on the stable and secure core of Fedora, Ozon provides the security you’ve come to excpect from a modern Linux system.</p>
         </div>
         <div class="col small-12 medium-6 large-4">
             <h2>Free and open</h2>
+            <img class="feat-image" src="./assets/feat-open.png" alt="Open">
             <p>Ozon is free and open source. So anyone can take a look at the source code, fork it for their own needs and contribute back to the upstream.</p>
         </div>
     </div>
 </section>
 
 <section class="container section-centered">
-    <div class="container-content">
+    <div class="container-content collab">
         <h2>Ozon is a collaboration between</h2>
-        <img src="./assets/nitrux-logo.png" alt="Nitrux">
-        <span class="and">&</span>
-        <img src="./assets/numix-logo.png" alt="Numix">
+        <a class="collab-item collab-logo" href="http://nitrux.in" target="_blank"><img src="./assets/logo-nitrux.png" alt="Nitrux"></a>
+        <span class="collab-item collab-separator" class="and">&</span>
+        <a class="collab-item collab-logo" href="http://numixproject.org" target="_blank"><img src="./assets/logo-numix.png" alt="Numix"></a>
     </div>
 </section>
 
