Added a WIP page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: boilerplate
     {% include nav.html %}
 
     {% if site.tagline %}
-        <h1 class="cover-title">{{ site.tagline }}</h1>
+        <h1 class="cover-title title">{{ site.tagline }}</h1>
     {% endif %}
 
     <div class="cover-video"></div>
@@ -17,9 +17,9 @@ layout: boilerplate
     <div class="container-content">
         <a class="button-download">Get Ozon OS beta</a>
         <div class="button-download-info">
-            <span class="button-download-info-item">System requirements</span>
+            <a class="button-download-info-item" href="./wip.html">System requirements</a>
             <span class="button-download-info-dot"></span>
-            <span class="button-download-info-item">Installation instructions</span>
+            <a class="button-download-info-item" href="./wip.html">Installation instructions</a>
         </div>
     </div>
 </section>
