--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@ layout: boilerplate
 <section class="container section-centered">
     <div class="container-content row">
         <div class="col small-12 medium-6 large-4">
-            <h2>Beautiful and fast</h2>
+            <h2>Simply beautiful</h2>
             <img class="feat-image" src="./assets/feat-beautiful.png" alt="Beautiful">
-            <p>Atom, the desktop environment of Ozon is designed in house to get your stuff done, while still being slick and modern.</p>
+            <p>Atom, the desktop environment of Ozon is designed to not get into your way and and be simple, sleek and modern and focused on helping you get stuff done as fast as possible.</p>
         </div>
         <div class="col small-12 medium-6 large-4">
-            <h2>Stable and secure</h2>
+            <h2>Gaming ready</h2>
             <img class="feat-image" src="./assets/feat-stable.png" alt="Stable">
-            <p>Based on the stable and secure core of Fedora, Ozon provides the security you’ve come to excpect from a modern Linux system.</p>
+            <p>If you're one of the folks that want to game on Linux, Ozon is the distro for you. It comes with performance optimisations and easy way to install video drivers and gaming platforms, so you will be able to play plenty of games with ease.</p>
         </div>
         <div class="col small-12 medium-6 large-4">
-            <h2>Free and open</h2>
+            <h2>Open source</h2>
             <img class="feat-image" src="./assets/feat-open.png" alt="Open">
-            <p>Ozon is free and open source. So anyone can take a look at the source code, fork it for their own needs and contribute back to the upstream.</p>
+            <p>We strongly believe in open source and for that reason we've made Ozon completely open source. You can find the source on <Github-link>, contribute to it or if you feel so inclined - fork it. We would really appreciate any sort of contributions.</p>
         </div>
     </div>
 </section>
