Change feature text

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@ layout: boilerplate
         <div class="col small-12 medium-6 large-4">
             <h2>Simply beautiful</h2>
             <img class="feat-image" src="./assets/feat-beautiful.png" alt="Beautiful">
-            <p>Atom, the desktop environment of Ozon is designed to not get into your way and and be simple, sleek and modern and focused on helping you get stuff done as fast as possible.</p>
+            <p>Atom, the desktop environment of Ozon, is designed to not get into your way and and be simple, sleek and modern while focusing on helping you to get stuff done quickly.</p>
         </div>
         <div class="col small-12 medium-6 large-4">
             <h2>Gaming ready</h2>
             <img class="feat-image" src="./assets/feat-stable.png" alt="Stable">
-            <p>If you're one of the folks that want to game on Linux, Ozon is the distro for you. It comes with performance optimisations and easy way to install video drivers and gaming platforms, so you will be able to play plenty of games with ease.</p>
+            <p>Ozon comes with performance optimisations as well as easy way to install video drivers and gaming platforms, so you will be able to play plenty of games with ease.</p>
         </div>
         <div class="col small-12 medium-6 large-4">
             <h2>Open source</h2>
             <img class="feat-image" src="./assets/feat-open.png" alt="Open">
-            <p>We strongly believe in open source and for that reason we've made Ozon completely open source. You can find the source on <Github-link>, contribute to it or if you feel so inclined - fork it. We would really appreciate any sort of contributions.</p>
+            <p>We strongly believe in open source and hence we've made Ozon completely open source. You can <a href="https://github.com/{{ site.github_username }}" target="_blank">find the source on GitHub</a>, contribute to it or fork it for your own needs.</p>
         </div>
     </div>
 </section>
