--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: boilerplate
 
 <section class="container section-centered">
     <div class="container-content">
-        <a id="button-download" class="button-download">
+        <a id="button-download" class="button button-download">
             <svg class="button-download-icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <g fill="none" fill-rule="evenodd">
                     <g fill="#fff">
