--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ layout: boilerplate
         <h1 class="cover-title title">{{ site.tagline }}</h1>
     {% endif %}
 
-    <div class="cover-video"></div>
+    <div class="cover-video">
+        <iframe width="360" height="203" src="https://www.youtube.com/embed/7XdLAUgIXfw?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+    </div>
 </header>
 
 <section class="container section-centered">
