--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@ layout: boilerplate
         <h1 class="cover-title title">{{ site.tagline }}</h1>
     {% endif %}
 
-    <div class="cover-video">
-        <iframe width="450" height="253" src="https://www.youtube.com/embed/7XdLAUgIXfw?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-    </div>
+    <div class="cover-video"></div>
 </header>
 
 <section class="container section-centered">
