Added new assets

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: boilerplate
         </div>
         <div class="col small-12 medium-6 large-4">
             <h2>Gaming ready</h2>
-            <img class="feat-image" src="./assets/feat-stable.png" alt="Stable">
+            <img class="feat-image" src="./assets/feat-gaming.png" alt="Gaming">
             <p>Ozon comes with performance optimisations as well as easy way to install video drivers and gaming platforms, so you will be able to play plenty of games with ease.</p>
         </div>
         <div class="col small-12 medium-6 large-4">
