Tweak and optimize images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ layout: boilerplate
         <h1 class="cover-title title">{{ site.tagline }}</h1>
     {% endif %}
 
-    <div class="cover-video"></div>
+    <a href="#" class="cover-video">
+        <img class="cover-video-tablet" src="./assets/tablet.png">
+    </a>
 </header>
 
 <section class="container section-centered">
