--- a/index.html
+++ b/index.html
@@ -19,12 +19,7 @@ layout: boilerplate
     <div class="container-content">
         <a id="button-download" class="button button-download">
             <svg class="button-download-icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <g fill="none" fill-rule="evenodd">
-                    <g fill="#fff">
-                        <path d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.373 12 12 12zm0-2c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"/>
-                        <path d="M14 14V6.01C14 4.9 13.105 4 12 4c-1.112 0-2 .9-2 2.01V14H7l5 6 5-6h-3z"/>
-                    </g>
-                </g>
+                <path fill="currentColor" d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zM9 4h6v9h4l-7 7-7-7h4V4z"/>
             </svg>
             Get Ozon OS beta
         </a>
