Without recommandations please

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: boilerplate
         <h1 class="cover-title title">{{ site.tagline }}</h1>
     {% endif %}
 
-    <a id="cover-video" class="cover-video" data-video="https://www.youtube.com/embed/4Q9YazKJeTM?autoplay=1">
+    <a id="cover-video" class="cover-video" data-video="https://www.youtube.com/embed/4Q9YazKJeTM?autoplay=1;rel=0&amp;showinfo=0;frameborder=0">
         <img class="cover-video-tablet" src="./assets/tablet.png">
     </a>
 </header>
