Added the what is a beta button. Haven't hooked it up to a lighbox just yet.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ layout: boilerplate
             <a class="button-download-info-item" href="./wip.html">System requirements</a>
             <span class="button-download-info-dot"></span>
             <a class="button-download-info-item" href="./wip.html">Installation instructions</a>
+	    <span class="button-download-info-dot"></span>
+            <a class="button-download-info-item" href="./wip.html">What is a beta?</a>
         </div>
     </div>
 </section>
