Preliminary FAQ page.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: boilerplate
             <span class="button-download-info-dot"></span>
             <a class="button-download-info-item" href="./wip.html">Installation instructions</a>
 	    <span class="button-download-info-dot"></span>
-            <a class="button-download-info-item" href="./wip.html">What is a beta?</a>
+            <a id="button-beta" class="button-download-info-item" href="./wip.html">What is a beta?</a>
         </div>
     </div>
 </section>
@@ -74,6 +74,14 @@ layout: boilerplate
         </p>
     </div>
 </script>
+
+<script id="beta-dialog-content" type="text/template">
+    <div class="beta-dialog">
+        <h1>What does Beta mean?</h1>
+        <p>The term Beta in software means that a product is incomplete and needs further testing before becoming a stable product. Ozon Beta is exactly that - incomplete. You won't find much in the way of gaming optimisations, some apps and parts of the desktop experience might be missing, the artwork will be incomplete, and we don't recommend letting your cat browse the web just yet. However that doesn't mean the beta is not usable - it is stable and polished enough for fearless users, so feel free to give it a whirl at your own risk.</p>
+    </div>
+</script>
+
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/1.2.1/velocity.js"></script>
