--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@ layout: boilerplate
 
 <section class="container section-left">
     <div class="container-content">
-        <center><p><h1>Ozon (operating system)</h1></p></center>
+        <center><p><h1>Ozon (operating system)</h1></p></center><br>
 	<p><h3>What Linux distribution does Ozon OS use as a base?</h3>
 	Linux From Scratch, of course! Ok, ok, we kid - we use <a href="https://getfedora.org/">Fedora 21</a> as a solid base for our distribution.</p>
 
@@ -39,7 +39,7 @@ But wait, there's more! In the final release we will have a application that wil
 	<p> </p>
 	<p> </p>
 
-	<center><p><h1>Atom ES (desktop shell)</h1></p></center>
+	<br><center><p><h1>Atom ES (desktop shell)</h1></p></center><br>
 
 	<p><h3>Isn't Ozon just a bunch of Gnome Themes?</h3></p>
 	No. Ozon is not definitely not just merely a bunch of themes. This is one completely false statement. Ozon Beta also feature gnome-shell extensions and a set carefully picked default apps and wallpapers. This makes the Ozon Beta an entire custom build desktop shell on top of Gnome.
@@ -62,7 +62,7 @@ But wait, there's more! In the final release we will have a application that wil
 	<p> </p>
 	<p> </p>
 
-	<center><p><h1>Development</h1></p></center>
+	<br><center><p><h1>Development</h1></p></center><br>
 
 	<p><h3>Where is the source code hosted?</h3></p>
 	All the source code for Ozon is maintained on our <a href="https://github.com/ozonos/">GitHub page</a>.
@@ -78,7 +78,7 @@ But wait, there's more! In the final release we will have a application that wil
 	<p> </p>
 	<p> </p>
 
-	<center><p><h1>Hardware</h1></p></center>
+	<br><center><p><h1>Hardware</h1></p></center><br>
 	
 	<p><h3>Can I use Ozon in Virtual Box?</h3></p>
 	As of Ozon OS Beta it's not possible to use the OS in Virtualbox. This is because of a bug with the Gnome Shell extension <i>user-themes</i> crashing when any theme but the default is selected. Therefore the OS will likely crash due to Ozon using a custom theme.
@@ -89,7 +89,7 @@ But wait, there's more! In the final release we will have a application that wil
 	<p> </p>
 	<p> </p>
 
-	<center><p><h1>Other</h1></p></center>
+	<br><center><p><h1>Other</h1></p></center><br>
 
 	<p><h3>Why isn't this called Numix OS?</h3></p>
 	Ozon is a joint project between <a href="https://numixproject.org/">Numix</a> and <a href="http://nitrux.in/">Nitrux</a>.
