Hacky Download page.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ layout: boilerplate
         <p>You're about to download the BETA version of Ozon OS. This means that the OS will be incomplete and there will be bugs. We are not to be held responsible if using Ozon Beta results in you being teleported on an unknown island, on which you will have to become modern day Robinson Crusoe to survive.</p>
         <p class="warning-dialog-buttons-area">
             <a class="button secondary modal-remove">I shall wait</a>
-            <a class="button modal-remove">I'll take my chances</a>
+            <a class="button modal-remove" href="./download.html">I'll take my chances</a>
         </p>
     </div>
 </script>
