New downloads page.

--- a/download.html
+++ b/download.html
@@ -6,23 +6,25 @@ layout: boilerplate
 
     {% include nav.html %}
 
-    {% if site.tagline %}
-        <h1 class="cover-title title">{{ site.tagline }}</h1>
-    {% endif %}
+        <h1 class="cover-title title-download">Download Ozon OS Hydrogen Beta.</h1>
 
 </header>
 
 <section class="container section-centered">
     <div class="container-content">
 	<h1>Select a download method:</h1>
-	<p title="Recommended method"><input type="radio" name="method" value="torrent" checked><font color="#9575cd"><strong>Torrent</strong></font></p>
-	<input type="radio" name="method" value="direct"><strong>Direct1</strong>
         <br>
         <a id="button-download" class="button button-download" href="https://www.youtube.com/watch?v=3yYZa-70u_M">
             <svg class="button-download-icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path fill="currentColor" d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zM9 4h6v9h4l-7 7-7-7h4V4z"/>
+                <path fill="currentColor" d="m 12,18 -7,-7 4,0 0,-11 6,0 0,11 4,0 z m 12,2 0,4 -24,0 0,-4 z m -4,-7 4,0 0,10 -4,0 z m -20,0 4,0 0,10 -4,0 z"/>
             </svg>
-            <strong>Download!</strong>
+            <strong>Direct</strong>
+        </a>
+	<a id="button-download" class="button button-download" href="https://www.youtube.com/watch?v=nIwrgAnx6Q8">
+            <svg class="button-download-icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path fill="currentColor" d="m 17,24 6,0 0,-5 -6,0 z m -16,-5 0,5 6,0 0,-5 z m 0,-3 6,0 0,-6 c 0,-2.0199954 2,-4 5,-4 3,0 5,1.9802646 5,4 l 0,6 6,0 0,-5.842877 C 23,4.6347959 18,0 12,0 6,0 1,4.6347959 1,10.157123 1.068883,12.016156 1.014862,14.089756 1,16 z"/>
+            </svg>
+            <strong>Torrent</strong>
         </a>
     </div>
 </section>
