--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@ layout: boilerplate
             Get Ozon OS beta
         </a>
         <div class="button-download-info">
-            <a class="button-download-info-item" href="./wip.html">System requirements</a>
+            <a id="button-requirements" class="button-download-info-item" href="#">System requirements</a>
             <span class="button-download-info-dot"></span>
             <a class="button-download-info-item" href="./wip.html">Installation instructions</a>
 	    <span class="button-download-info-dot"></span>
-            <a id="button-beta" class="button-download-info-item" href="./wip.html">What is a beta?</a>
+            <a id="button-beta" class="button-download-info-item" href="#">What is a beta?</a>
         </div>
     </div>
 </section>
@@ -80,6 +80,26 @@ layout: boilerplate
         <h1>What does Beta mean?</h1>
         <p>The term Beta in software means that a product is incomplete and needs further testing before becoming a stable product. Ozon Beta is exactly that - incomplete. You won't find much in the way of gaming optimisations, some apps and parts of the desktop experience might be missing, the artwork will be incomplete, and we don't recommend letting your cat browse the web just yet. However that doesn't mean the beta is not usable - it is stable and polished enough for fearless users, so feel free to give it a whirl at your own risk.</p>
     </div>
+</script>
+
+<script id="requirements-dialog-content" type="text/template">
+    <h3>Minimum:</h3>
+    <ul>
+        <il>1GHz or faster processor</il>
+        <il>1GB System Memory</il>
+        <il>10GB unallocated drive space</il>
+        <il>3D-accelerated GPU<il>
+    </ul>
+
+    <br>
+
+    <h3>Recommended:</h3>
+    <ul>
+        <il>2GHz or faster processor</il>
+        <il>2GB System Memory</il>
+        <il>20GB unallocated drive space</il>
+        <il>3D-accelerated GPU<il>
+    </ul>
 </script>
 
 
