--- a/index.html
+++ b/index.html
@@ -85,20 +85,19 @@ layout: boilerplate
 <script id="requirements-dialog-content" type="text/template">
     <h3>Minimum:</h3>
     <ul>
-        <il>1GHz or faster processor</il>
-        <il>1GB System Memory</il>
-        <il>10GB unallocated drive space</il>
-        <il>3D-accelerated GPU<il>
+        <li>1GHz or faster processor</li>
+        <li>1GB System Memory</li>
+        <li>10GB unallocated drive space</li>
+        <li>3D-accelerated GPU</li>
     </ul>
 
-    <br>
 
     <h3>Recommended:</h3>
     <ul>
-        <il>2GHz or faster processor</il>
-        <il>2GB System Memory</il>
-        <il>20GB unallocated drive space</il>
-        <il>3D-accelerated GPU<il>
+        <li>2GHz or faster processor</li>
+        <li>2GB System Memory</li>
+        <li>20GB unallocated drive space</li>
+        <li>3D-accelerated GPU</li>
     </ul>
 </script>
 
