--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@ layout: boilerplate
 <script id="beta-dialog-content" type="text/template">
     <div class="beta-dialog">
         <h1>What does Beta mean?</h1>
-        <p>The term Beta in software means that a product is incomplete and needs further testing before becoming a stable product. Ozon Beta is exactly that - incomplete. You won't find much in the way of gaming optimisations, some apps and parts of the desktop experience might be missing, the artwork will be incomplete, and we don't recommend letting your cat browse the web just yet. However that doesn't mean the beta is not usable - it is stable and polished enough for fearless users, so feel free to give it a whirl at your own risk.</p>
+        <p>The term Beta in software means that a product is incomplete and needs further testing before becoming a stable product.</p>
+        <p>Ozon Beta is exactly that - incomplete. You won't find much in the way of gaming optimisations, some apps and parts of the desktop experience might be missing, the artwork will be incomplete, and we don't recommend letting your cat browse the web just yet.</p>
+        <p>However that doesn't mean the beta is not usable - it is stable and polished enough for fearless users, so feel free to give it a whirl at your own risk.</p>
     </div>
 </script>
 
