Download page responsive buttons

--- a/download.html
+++ b/download.html
@@ -20,7 +20,7 @@ layout: boilerplate
             </svg>
             <strong>Torrent</strong>
         </a>
-	or
+              <span class="display-sm-block">or</span>
         <a id="button-download" class="button button-download" href="https://www.youtube.com/watch?v=3yYZa-70u_M">
             <svg class="button-download-icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path fill="currentColor" d="m 12,18 -7,-7 4,0 0,-11 6,0 0,11 4,0 z m 12,2 0,4 -24,0 0,-4 z m -4,-7 4,0 0,10 -4,0 z m -20,0 4,0 0,10 -4,0 z"/>
