I do so hate MD.

--- a/download.html
+++ b/download.html
@@ -6,7 +6,7 @@ layout: boilerplate
 
     {% include nav.html %}
 
-        <h1 class="cover-title title-download">Download Ozon OS Hydrogen Beta.</h1>
+        <h1 class="cover-title title-dark">Download Ozon OS Hydrogen Beta</h1>
 
 </header>
 
