--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ layout: boilerplate
 <script id="requirements-dialog-content" type="text/template">
     <h3>Minimum:</h3>
     <ul>
-        <li>1GHz or faster processor</li>
+        <li>1GHz Processor</li>
         <li>1GB System Memory</li>
         <li>10GB unallocated drive space</li>
         <li>3D-accelerated GPU</li>
@@ -96,9 +96,9 @@ layout: boilerplate
 
     <h3>Recommended:</h3>
     <ul>
-        <li>2GHz or faster processor</li>
-        <li>2GB System Memory</li>
-        <li>20GB unallocated drive space</li>
+        <li>2GHz or faster Processor</li>
+        <li>2GB or more System Memory</li>
+        <li>20GB or more unallocated drive space</li>
         <li>3D-accelerated GPU</li>
     </ul>
 </script>
