FAQ page title typo fix.

--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@ layout: boilerplate
 
     {% include nav.html %}
 
-        <h1 class="cover-title title-dark">Frequantly Asked Questions</h1>
+        <h1 class="cover-title title-dark">Frequently Asked Questions</h1>
 
 </header>
 
