--- a/404.html
+++ b/404.html
@@ -1,12 +1,11 @@
 ---
 layout: boilerplate
-permalink: /wip/
 ---
 
 <section class="container section-middle">
     <div class="container-content section-middle-inner">
-        <h1 class="title">This page is under development</h1>
-        <p>Our lazy hamsters are still working on this page. Please check back later.</p>
+        <h1 class="title">Error 404!</h1>
+        <p>This page doesn't exist. Please check back later.</p>
         <p><a href="/">Go back to home.</a>
     </div>
 </section>
