--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: boilerplate
+permalink: /
 ---
 
 <header class="cover">
@@ -106,6 +107,6 @@ layout: boilerplate
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/1.2.1/velocity.js"></script>
-<script src="./lace/src/js/jquery.lace.js"></script>
-<script src="./lace/src/js/jquery.modal.js"></script>
-<script src="./js/main.js"></script>
+<script src="/lace/src/js/jquery.lace.js"></script>
+<script src="/lace/src/js/jquery.modal.js"></script>
+<script src="/js/main.js"></script>
