--- a/download.html
+++ b/download.html
@@ -14,14 +14,14 @@ layout: boilerplate
     <div class="container-content">
 	<h1>Select a download method:</h1>
         <br>
-		<a id="button-download" title="Recommended method" class="button button-download" href="https://www.youtube.com/watch?v=nIwrgAnx6Q8">
+		<a id="button-download" title="Recommended method" class="button button-download" href="https://my.pcloud.com/publink/show?code=XZS8OkZngH2fO30zdkxrDBtBoeqYR7qCTWV">
             <svg class="button-download-icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path fill="currentColor" d="m 17,24 6,0 0,-5 -6,0 z m -16,-5 0,5 6,0 0,-5 z m 0,-3 6,0 0,-6 c 0,-2.0199954 2,-4 5,-4 3,0 5,1.9802646 5,4 l 0,6 6,0 0,-5.842877 C 23,4.6347959 18,0 12,0 6,0 1,4.6347959 1,10.157123 1.068883,12.016156 1.014862,14.089756 1,16 z"/>
             </svg>
             <strong>Torrent</strong>
         </a>
               <span class="display-sm-block">or</span>
-        <a id="button-download" class="button button-download" href="https://www.youtube.com/watch?v=3yYZa-70u_M">
+        <a id="button-download" class="button button-download" href="https://sourceforge.net/projects/ozonosos/files/latest/download">
             <svg class="button-download-icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path fill="currentColor" d="m 12,18 -7,-7 4,0 0,-11 6,0 0,11 4,0 z m 12,2 0,4 -24,0 0,-4 z m -4,-7 4,0 0,10 -4,0 z m -20,0 4,0 0,10 -4,0 z"/>
             </svg>
