Added scripts in the FAQ page to run responsiveness.

--- a/faq.html
+++ b/faq.html
@@ -70,12 +70,12 @@ But wait, there's more! In the final release we will have a application that wil
 	You wanna help us? Ace! If there's a specific issue which you have in mind just submit a pull request and after it has been checked over we'll merge it in. If you want to get involved with more general development just shoot us an email on <a href="mailto: ozonosproject@gmail.com?Subject=Applying for Ozon developer" target="_blank"> ozonosproject@gmail.com</a> with subject "Applying for Ozon developer" and we will talk from there.
 	<p><h3>How do I get involved contributing artwork?</h3></p>
 	This depends on what type of artwork you want to contribute - icons or wallpapers. If you want to do icons, <a href="https://github.com/ozonos/ozon-icon-theme#user-contributions">read this</a>. If you want to contribute wallpapers, <a href="https://www.flickr.com/groups/2722613@N23/rules/">read this</a> and then submit them to <a href="https://www.flickr.com/groups/2722613@N23">this flickr group</a>.
-	
+
 	<p> </p>
 	<p> </p>
 
 	<br><center><p><h1>Hardware</h1></p></center><br>
-	
+
 	<p><h3>Can I use Ozon in Virtual Box?</h3></p>
 	As of Ozon OS Beta it's not possible to use the OS in Virtualbox. This is because of a bug with the Gnome Shell extension <i>user-themes</i> crashing when any theme but the default is selected. Therefore the OS will likely crash due to Ozon using a custom theme.
 
@@ -89,7 +89,7 @@ But wait, there's more! In the final release we will have a application that wil
 
 	<p><h3>Why isn't this called Numix OS?</h3></p>
 	Ozon is a joint project between <a href="https://numixproject.org/">Numix</a> and <a href="http://nitrux.in/">Nitrux</a>.
-	
+
 	<p><h3>Where did the naming schemes come from? Why is Ozone spelled wrong?</h3></p>
 	Because of branding reasons. "Ozone" is more recognisable as the chemical compound that consists of 3 oxygen atoms connected in the following way: ... wait, we shouldn't confuse you with chemistry information. Now us continue. However "Ozon" can be much more recognisable as something else - in our case - a Linux distribution. Once upon a time when we were deciding about the distro and desktop shell name we narrowed it down to two possibilities. Possibility 1 "Ozon OS" with "Atom ES" desktop shell and OS version 1 - "Hydrogen", 2 - "Helium", 3 "Lithium" and so on and so forth, you know how the periodic table goes. Possibility 2 - "Asgard OS", with "Valhalla" desktop shell and version named after Norse gods. Possibility 1 won and as wise people say ... the rest is history.
 
@@ -99,4 +99,11 @@ But wait, there's more! In the final release we will have a application that wil
     </div>
 </section>
 
+
 {% include footer.html %}
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/velocity/1.2.1/velocity.js"></script>
+<script src="/lace/src/js/jquery.lace.js"></script>
+<script src="/lace/src/js/jquery.modal.js"></script>
+<script src="/js/main.js"></script>
