--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ permalink: /
             Get Ozon OS beta
         </a>
         <div class="button-download-info">
-            <a id="button-requirements" class="button-download-info-item" href="#">System requirements</a>
+            <a id="button-requirements" class="button-download-info-item">System requirements</a>
             <span class="button-download-info-dot"></span>
-            <a class="button-download-info-item" href="./wip.html">Installation instructions</a>
+            <a class="button-download-info-item" href="/wip">Installation instructions</a>
 	    <span class="button-download-info-dot"></span>
-            <a id="button-beta" class="button-download-info-item" href="#">What is a beta?</a>
+            <a id="button-beta" class="button-download-info-item">What is a beta?</a>
         </div>
     </div>
 </section>
@@ -69,10 +69,10 @@ permalink: /
     <div class="warning-dialog">
         <h1>Downloading beta software!</h1>
         <p>You're about to download the BETA version of Ozon OS. This means that the OS will be incomplete and there will be bugs. We are not to be held responsible if using Ozon Beta results in you being teleported on an unknown island, on which you will have to become modern day Robinson Crusoe to survive.</p>
-        <p class="warning-dialog-buttons-area">
+        <div class="warning-dialog-buttons-area">
             <a class="button secondary modal-remove">I shall wait</a>
             <a class="button modal-remove" href="./download.html">I'll take my chances</a>
-        </p>
+        </div>
     </div>
 </script>
 
@@ -86,22 +86,23 @@ permalink: /
 </script>
 
 <script id="requirements-dialog-content" type="text/template">
-    <h3>Minimum:</h3>
-    <ul>
-        <li>1GHz Processor</li>
-        <li>1GB System Memory</li>
-        <li>10GB unallocated drive space</li>
-        <li>3D-accelerated GPU</li>
-    </ul>
+    <div class="requirements-dialog">
+        <h3>Minimum:</h3>
+        <ul>
+            <li>1GHz Processor</li>
+            <li>1GB System Memory</li>
+            <li>10GB unallocated drive space</li>
+            <li>3D-accelerated GPU</li>
+        </ul>
 
-
-    <h3>Recommended:</h3>
-    <ul>
-        <li>2GHz or faster Processor</li>
-        <li>2GB or more System Memory</li>
-        <li>20GB or more unallocated drive space</li>
-        <li>3D-accelerated GPU</li>
-    </ul>
+        <h3>Recommended:</h3>
+        <ul>
+            <li>2GHz or faster Processor</li>
+            <li>2GB or more System Memory</li>
+            <li>20GB or more unallocated drive space</li>
+            <li>3D-accelerated GPU</li>
+        </ul>
+    </div>
 </script>
 
 
