Simple fix on index page
Duplicated word 'and', just bother me enough to make this request. :P

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ permalink: /
         <div class="col small-12 medium-6 large-4">
             <h2>Simply beautiful</h2>
             <img class="feat-image" src="./assets/feat-beautiful.png" alt="Beautiful">
-            <p>Atom, the desktop environment of Ozon, is designed to not get into your way and and be simple, sleek and modern while focusing on helping you to get stuff done quickly.</p>
+            <p>Atom, the desktop environment of Ozon, is designed to not get into your way and be simple, sleek and modern while focusing on helping you to get stuff done quickly.</p>
         </div>
         <div class="col small-12 medium-6 large-4">
             <h2>Gaming ready</h2>
