--- a/download.html
+++ b/download.html
@@ -16,7 +16,7 @@ layout: boilerplate
         <br>
 <h3><font color="#f32441">CAUTION: The Beta version is only for 64 bit computers!</font></h3>
 <br>
-		<a id="button-download" title="Recommended method" class="button button-download" href="https://my.pcloud.com/publink/show?code=XZS8OkZngH2fO30zdkxrDBtBoeqYR7qCTWV">
+		<a id="button-download" title="Recommended method" class="button button-download" href="magnet:?xt=urn:btih:f2f430c552ec868c6824142df7ffc28858d064b1&dn=Ozon-Hydrogen-Beta.iso&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969&tr=udp%3A%2F%2Fopen.demonii.com%3A1337&tr=udp%3A%2F%2F9.rarbg.com%3A2710%2Fannounce&tr=udp%3A%2F%2F9.rarbg.me%3A2710%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Fopen.demonii.com%3A1337%2Fannounce">
             <svg class="button-download-icon" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path fill="currentColor" d="m 17,24 6,0 0,-5 -6,0 z m -16,-5 0,5 6,0 0,-5 z m 0,-3 6,0 0,-6 c 0,-2.0199954 2,-4 5,-4 3,0 5,1.9802646 5,4 l 0,6 6,0 0,-5.842877 C 23,4.6347959 18,0 12,0 6,0 1,4.6347959 1,10.157123 1.068883,12.016156 1.014862,14.089756 1,16 z"/>
             </svg>
